# ranger_devicons

./: .gitignore  CONTRIBUTING.MD  Makefile  README.md  __init__.py  devicons.py  devicons_linemode.py  pyproject.toml  requirements.txt  setup.py
.github/: main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: greetings.yml  main.yml  python-tests.yml  stale.yml
locales/: de.py  de.yml  en.yml  es.py  es.yml  fr.py  fr.yml  hu.yml  it.py  it.yml  ja.py  pt.yml  pt_BR.py  ru.py  sv.yml  zh_CN.yml  zh_TW.yml  zh_cn.py
ranger_devicons/: cli.py  devicons.py
tests/: conftest.py  test_devicons.py  test_setup_validation.py  test_translations.py  test_xdg.py
